# import-guard

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  test_doc.txt
import_guard/: __init__.py  cli.py
import_guard/analyzer/: diff_engine.py  missing_detector.py  unused_detector.py
import_guard/integrations/: docker_plugin.py  github_action.py  pre_commit.py
import_guard/optimizer/: requirements_builder.py  size_estimator.py
import_guard/reporter/: cli_output.py  html_report.py  json_output.py
import_guard/resolver/: metadata_resolver.py  package_mapper.py
import_guard/scanner/: ast_scanner.py  import_parser.py
