[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "import-guard"
version = "0.1.0"
description = "Python dependency audit & optimization tool — find unused packages and missing dependencies"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{name = "import-guard team"}]
keywords = ["dependencies", "audit", "requirements", "optimization", "pip"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
import-guard = "import_guard.cli:main"

[project.urls]
Homepage = "https://github.com/user/import-guard"
Repository = "https://github.com/user/import-guard"

[tool.setuptools.packages.find]
include = ["import_guard*"]
